[package]
name = "gym_car"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gym_car"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
numpy = "0.27.1"
rand = "0.9.2"
math_utils = { path = "../math_utils" }
car_sim = { path = "../car_sim" }
